--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  http: ^1.1.0
+  http: ^1.2.0
   logging: ^1.2.0
-  meta: ^1.9.1
+  meta: ^1.12.0
   tuple: ^2.0.2
   web_socket_channel: ^2.4.0
   sse_channel:
     git: 
-      url: https://github.com/RCSandberg/sse_channel.git
-      ref: feature/bump-dart-and-package-versions
+      url: https://github.com/jamiewest/sse_channel.git
+      ref: main
   equatable: ^2.0.5
 
 dev_dependencies:
