--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   http: ^1.2.0
   logging: ^1.2.0
-  meta: ^1.12.0
+  meta: 1.10.0
   tuple: ^2.0.2
   web_socket_channel: ^2.4.0
   sse_channel:
